Wed Feb 7 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
    - HTTP/1.0 style "Range" requests are implmented and tested
    - Added a ton of debug info

Sat Feb 3 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- MiniWebSvr now handles range errors properly
	- #ifdef _DEBUG then prints out headers as debug info...

Fri Feb 2 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Added initial support for Thread Pools
	- Added initial support for Range-Based downloads
	- Changed polling back to 1 second

Wed Jan 24 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Got single threaded server to work on Linux
	- Implemented Address reuse (for Linux to ignore TIME_WAIT state)(to
	  re-listen the server quickly)
	- Disabled Nagle, as it interferes with our own buffering algorithm

Tue Jan 23 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Started port to UNIX sockets
	- Got single-threaded listener to work
	- GET "201 Created" types currently fail
	- OPTIONS HEAD and GET (file) works.
	- Fixed a few API misuses (for both Windows/UNIX)

Thu Jan 18 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	Released version 0.05
	- Fixed a bug in server_readln where it would return an array that is 
	  one character too long. The problem was hidden because the buffer
	  start out as zeroes.
	- Supports conditinal GET's 
	  If-Modified-Since: Using string comparison (Based on the assumption the client stores the string)
	  Tested & works with Firefox, Konqueror & IE. Opera is not playing nice, not even requesting an 
	  If-Modified-Since on forced refresh, and it's cache never expires.

Tue Jan 16 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Fixed up the indentation
	- Added OPTIONS
	- Added HEAD
	- Moved GET/HEAD logic to own file

Mon Jan 15 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Made directory listing look more like Apache